Adjusted the .content css to adjust for the new footer behavior and corrected text align in the grocery page css. Made .content the parent of all page content between the navbar and footer for every page.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     .content {
         max-width: 1500px;
         margin: auto;
+        margin-bottom: 70px;
         text-align: center;
     }
 }
@@ -179,11 +180,18 @@ table {
     .store-description {
         margin: 30px;
     }
-    .store-popup a {
+    .store-popup {
+        text-align: left;
         position: absolute;
         width: 100%;
         height: 100%;
         z-index: 100;
+        a {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            z-index: 101;
+        }
     }
 }
 
